// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AboutSreen deve corresponder ao snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#f5f5f5",
      "flex": 1,
    }
  }
>
  <View>
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="backButton"
    >
      <Text>
        Sobre o iGO
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 3,
        "margin": 15,
        "padding": 20,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "#3f51b5",
          "fontSize": 22,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      iGO
    </Text>
    <Text
      style={
        {
          "color": "#757575",
          "fontSize": 14,
          "marginBottom": 20,
          "textAlign": "center",
        }
      }
    >
      Versão 1.0.0
    </Text>
    <Text
      style={
        {
          "fontSize": 15,
          "lineHeight": 22,
          "marginBottom": 20,
          "textAlign": "center",
        }
      }
    >
      O iGO é um aplicativo de transporte desenvolvido para facilitar seus deslocamentos diários com segurança e praticidade.
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 15,
        }
      }
    >
      <View
        testID="icon-map-marked-alt"
      />
      <Text
        style={
          {
            "fontSize": 15,
            "marginLeft": 15,
          }
        }
      >
        Acompanhamento em tempo real
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#9e9e9e",
          "fontSize": 14,
          "fontStyle": "italic",
          "marginTop": 30,
          "textAlign": "center",
        }
      }
    >
      Desenvolvido como projeto acadêmico
    </Text>
  </View>
</View>
`;

exports[`Tela Sobre deve corresponder ao snapshot 1`] = `
<View
  style={
    {
      "backgroundColor": "#f5f5f5",
      "flex": 1,
    }
  }
>
  <View
    testID="header"
  >
    <View
      accessibilityState={
        {
          "busy": undefined,
          "checked": undefined,
          "disabled": undefined,
          "expanded": undefined,
          "selected": undefined,
        }
      }
      accessibilityValue={
        {
          "max": undefined,
          "min": undefined,
          "now": undefined,
          "text": undefined,
        }
      }
      accessible={true}
      collapsable={false}
      focusable={true}
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        {
          "opacity": 1,
        }
      }
      testID="backButton"
    >
      <Text>
        Sobre o iGO
      </Text>
    </View>
  </View>
  <View
    style={
      {
        "backgroundColor": "#ffffff",
        "borderRadius": 8,
        "elevation": 3,
        "margin": 15,
        "padding": 20,
        "shadowColor": "#000",
        "shadowOffset": {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 0.1,
        "shadowRadius": 4,
      }
    }
  >
    <Text
      style={
        {
          "color": "#3f51b5",
          "fontSize": 22,
          "fontWeight": "bold",
          "textAlign": "center",
        }
      }
    >
      iGO
    </Text>
    <Text
      style={
        {
          "color": "#757575",
          "fontSize": 14,
          "marginBottom": 20,
          "textAlign": "center",
        }
      }
    >
      Versão 1.0.0
    </Text>
    <Text
      style={
        {
          "fontSize": 15,
          "lineHeight": 22,
          "marginBottom": 20,
          "textAlign": "center",
        }
      }
    >
      O iGO é um aplicativo de transporte desenvolvido para facilitar seus deslocamentos diários com segurança e praticidade.
    </Text>
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
          "marginBottom": 15,
        }
      }
    >
      <View
        testID="icon-map-marked-alt"
      />
      <Text
        style={
          {
            "fontSize": 15,
            "marginLeft": 15,
          }
        }
      >
        Acompanhamento em tempo real
      </Text>
    </View>
    <Text
      style={
        {
          "color": "#9e9e9e",
          "fontSize": 14,
          "fontStyle": "italic",
          "marginTop": 30,
          "textAlign": "center",
        }
      }
    >
      Desenvolvido como projeto acadêmico
    </Text>
  </View>
</View>
`;
